--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -93,57 +93,161 @@ jobs:
         run: composer run phpstan
         continue-on-error: true
 
-  test:
-    name: Test (PHP ${{ matrix.php }}, WP ${{ matrix.wp }}, WC ${{ matrix.wc }})
+  # Smoke test - runs first on stable config to fail fast
+  smoke-test:
+    name: Smoke Test (PHP 8.2, WP 6.7, WC 9.5.2)
     runs-on: ubuntu-latest
     needs: lint
-    # Allow experimental builds to fail without failing the whole workflow
-    continue-on-error: ${{ matrix.experimental || false }}
 
-    strategy:
-      fail-fast: false
-      matrix:
-        # 3x3x3 matrix: PHP (previous, stable, bleeding) x WP x WC
-        # Note: WC 10.x requires WP 6.8+, WC 9.x requires WP 6.6+
-        php: ['8.1', '8.2', '8.3']
-        wp: ['6.6', '6.7', 'latest']
-        wc: ['9.5.2', '10.4.3', 'latest']
-        experimental: [false]
-        coverage: [false]
-        exclude:
-          # WC 10.x requires WP 6.8+, so exclude WC 10.x with older WP
-          - wp: '6.6'
-            wc: '10.4.3'
-          - wp: '6.6'
-            wc: 'latest'
-          - wp: '6.7'
-            wc: '10.4.3'
-          - wp: '6.7'
-            wc: 'latest'
-        include:
-          # Only collect coverage on the stable configuration (much faster without coverage)
-          - php: '8.2'
-            wp: '6.7'
-            wc: '9.5.2'
-            experimental: false
-            coverage: true
-          # Mark bleeding edge combinations as experimental (allowed to fail)
-          - php: '8.3'
-            wp: 'latest'
-            wc: 'latest'
-            experimental: true
-            coverage: false
+    outputs:
+      success: ${{ steps.test.outcome == 'success' }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup PHP with tools
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: composer
+          coverage: none
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: '10.8.0'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+
+      - name: Get Composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-php8.2-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-php8.2-
+
+      # Cache Docker images for wp-env
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-wp-php8.2-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-wp-php8.2-
+
+      - name: Install Node dependencies
+        run: pnpm install
+
+      - name: Prefix PHP dependencies
+        run: composer prefix-dependencies
+
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Configure wp-env
+        run: |
+          cat > .wp-env.json << 'EOF'
+          {
+            "core": "WordPress/WordPress#6.7",
+            "phpVersion": "8.2",
+            "plugins": [
+              "https://downloads.wordpress.org/plugin/woocommerce.9.5.2.zip",
+              "."
+            ],
+            "config": {
+              "WP_DEBUG": true,
+              "SCRIPT_DEBUG": true,
+              "WP_PHP_BINARY": "php",
+              "WP_TESTS_EMAIL": "admin@example.org",
+              "WP_TESTS_TITLE": "Test Blog"
+            },
+            "mappings": {}
+          }
+          EOF
+
+      - name: Start WordPress Environment
+        run: pnpm run wp-env start
+
+      - name: Check versions
+        run: |
+          echo "=== Installed Versions ==="
+          pnpm run wp-env run cli -- wp core version
+          pnpm run wp-env run cli -- wp plugin list
+
+      - name: Run PHPUnit tests
+        id: test
+        run: pnpm run test
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: phpunit-results-smoke-test
+          path: phpunit.xml
+          retention-days: 7
+
+  # Full matrix - only runs if smoke test passes
+  # On PRs and main: run full 3x3x3 matrix
+  # On feature branches: skip (smoke test is sufficient)
+  test-matrix:
+    name: Test (PHP ${{ matrix.php }}, WP ${{ matrix.wp }}, WC ${{ matrix.wc }})
+    runs-on: ubuntu-latest
+    needs: smoke-test
+    # Only run full matrix on main branch and PRs, not feature branches
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
+    continue-on-error: ${{ matrix.experimental || false }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        # 3x3x3 matrix: PHP x WP x WC
+        # Note: WC 10.x requires WP 6.8+, WC 9.x works with WP 6.6+
+        php: ['8.1', '8.2', '8.3']
+        wp: ['6.6', '6.7', 'latest']
+        wc: ['9.5.2', '10.4.3', 'latest']
+        experimental: [false]
+        exclude:
+          # WC 10.x requires WP 6.8+
+          - wp: '6.6'
+            wc: '10.4.3'
+          - wp: '6.6'
+            wc: 'latest'
+          - wp: '6.7'
+            wc: '10.4.3'
+          - wp: '6.7'
+            wc: 'latest'
+          # Skip the smoke test configuration (already ran)
+          - php: '8.2'
+            wp: '6.7'
+            wc: '9.5.2'
+        include:
+          # Mark bleeding edge as experimental
+          - php: '8.3'
+            wp: 'latest'
+            wc: 'latest'
+            experimental: true
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           tools: composer
-          # Coverage is handled inside wp-env Docker container with Xdebug
           coverage: none
 
       - name: Setup pnpm
@@ -167,6 +271,18 @@ jobs:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-php${{ matrix.php }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-php${{ matrix.php }}-
+
+      # Cache Docker images for wp-env
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-wp-php${{ matrix.php }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-wp-php${{ matrix.php }}-
 
       - name: Install Node dependencies
         run: pnpm install
@@ -207,10 +323,7 @@ jobs:
               "SCRIPT_DEBUG": true,
               "WP_PHP_BINARY": "php",
               "WP_TESTS_EMAIL": "admin@example.org",
-              "WP_TESTS_TITLE": "Test Blog",
-              "WP_TESTS_DOMAIN": "http://localhost",
-              "WP_SITEURL": "http://localhost",
-              "WP_HOME": "http://localhost"
+              "WP_TESTS_TITLE": "Test Blog"
             },
             "mappings": {}
           }
@@ -219,16 +332,9 @@ jobs:
           cat .wp-env.json
 
       - name: Start WordPress Environment
-        run: |
-          if [ "${{ matrix.coverage }}" = "true" ]; then
-            # Start with coverage enabled (uses PCOV configured in PHP)
-            pnpm run wp-env start --xdebug=coverage
-          else
-            # Start without coverage for faster tests
-            pnpm run wp-env start
-          fi
+        run: pnpm run wp-env start
 
-      - name: Check WordPress and WooCommerce versions
+      - name: Check versions
         run: |
           echo "=== Installed Versions ==="
           pnpm run wp-env run cli -- wp core version
@@ -245,20 +351,105 @@ jobs:
           path: phpunit.xml
           retention-days: 7
 
+  # Coverage job - runs separately with Xdebug
+  coverage:
+    name: Code Coverage
+    runs-on: ubuntu-latest
+    needs: smoke-test
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          tools: composer
+          coverage: none  # Coverage runs inside Docker with Xdebug
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: '10.8.0'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
+
+      - name: Get Composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-php8.2-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-php8.2-
+
+      - name: Install Node dependencies
+        run: pnpm install
+
+      - name: Prefix PHP dependencies
+        run: composer prefix-dependencies
+
+      - name: Install Composer dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Configure wp-env
+        run: |
+          cat > .wp-env.json << 'EOF'
+          {
+            "core": "WordPress/WordPress#6.7",
+            "phpVersion": "8.2",
+            "plugins": [
+              "https://downloads.wordpress.org/plugin/woocommerce.9.5.2.zip",
+              "."
+            ],
+            "config": {
+              "WP_DEBUG": true,
+              "SCRIPT_DEBUG": true,
+              "WP_PHP_BINARY": "php",
+              "WP_TESTS_EMAIL": "admin@example.org",
+              "WP_TESTS_TITLE": "Test Blog"
+            },
+            "mappings": {}
+          }
+          EOF
+
+      - name: Start WordPress Environment with Xdebug
+        run: pnpm run wp-env start --xdebug=coverage
+
+      - name: Run PHPUnit with coverage
+        run: pnpm run test
+
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
-        if: matrix.coverage == true
         with:
           name: coverage-report
           path: coverage/
           retention-days: 7
 
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: coverage/clover.xml
+          flags: unittests
+          fail_ci_if_error: false
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   # Publish test results as PR comment
   publish-results:
     name: Publish Test Results
     runs-on: ubuntu-latest
-    needs: test
-    if: always()
+    needs: [smoke-test, test-matrix]
+    if: always() && (github.event_name == 'pull_request' || github.ref == 'refs/heads/main')
 
     permissions:
       checks: write
@@ -278,33 +469,3 @@ jobs:
           files: "test-results/**/*.xml"
           comment_mode: always
           check_name: PHPUnit Test Results
-
-  # Upload coverage to Codecov
-  coverage:
-    name: Code Coverage
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download coverage report
-        uses: actions/download-artifact@v4
-        continue-on-error: true
-        id: download-coverage
-        with:
-          name: coverage-report
-          path: coverage/
-
-      - name: Upload to Codecov
-        uses: codecov/codecov-action@v5
-        if: steps.download-coverage.outcome == 'success'
-        with:
-          files: coverage/clover.xml
-          flags: unittests
-          fail_ci_if_error: false
-          verbose: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
