--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -6,8 +6,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.0",
-    "@transifex/native": "^7.1.1",
-    "@transifex/react": "^7.1.1",
+    "i18next": "^24.0.0",
+    "i18next-http-backend": "^3.0.0",
+    "react-i18next": "^15.0.0",
     "@woocommerce/components": "^12.3.0",
     "@wordpress/api-fetch": "7.0.0",
     "@wordpress/components": "^28.0.0",
@@ -29,7 +30,6 @@
     "@babel/runtime": "7.24.7",
     "@svgr/webpack": "8.1.0",
     "@tanstack/react-query-devtools": "^5.45.0",
-    "@transifex/cli": "^7.1.1",
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.5",
     "@types/react": "18.3.3",
