--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -9,8 +9,9 @@
     "@headlessui/react": "^2.2.9",
     "@headlessui/tailwindcss": "^0.2.1",
     "@tanstack/react-query": "^5.90.7",
-    "@transifex/native": "^7.1.4",
-    "@transifex/react": "^7.1.4",
+    "i18next": "^24.0.0",
+    "i18next-http-backend": "^3.0.0",
+    "react-i18next": "^15.0.0",
     "@wordpress/api-fetch": "^7.34.0",
     "@wordpress/components": "^30.7.0",
     "@wordpress/element": "^6.34.0",
@@ -34,7 +35,6 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
-    "@transifex/cli": "^7.1.4",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.2.3",
