--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -6,9 +6,6 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.0",
-    "i18next": "^24.0.0",
-    "i18next-http-backend": "^3.0.0",
-    "react-i18next": "^15.0.0",
     "@woocommerce/components": "^12.3.0",
     "@wordpress/api-fetch": "7.0.0",
     "@wordpress/components": "^28.0.0",
@@ -16,10 +13,15 @@
     "@wordpress/hooks": "^4.0.0",
     "@wordpress/url": "4.0.0",
     "classnames": "2.5.1",
+    "i18next": "^24.0.0",
+    "i18next-chained-backend": "^5.0.2",
+    "i18next-http-backend": "^3.0.0",
+    "i18next-localstorage-backend": "^4.3.1",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-error-boundary": "4.0.13"
+    "react-error-boundary": "4.0.13",
+    "react-i18next": "^15.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.24.7",
