--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -9,21 +9,17 @@
     "@headlessui/react": "^2.2.9",
     "@headlessui/tailwindcss": "^0.2.1",
     "@tanstack/react-query": "^5.90.7",
+    "@wcpos/i18n": "workspace:*",
     "@wordpress/api-fetch": "^7.34.0",
     "@wordpress/components": "^30.7.0",
     "@wordpress/element": "^6.34.0",
     "@wordpress/url": "^4.34.0",
     "classnames": "2.5.1",
-    "i18next": "^24.0.0",
-    "i18next-chained-backend": "^5.0.2",
-    "i18next-http-backend": "^3.0.0",
-    "i18next-localstorage-backend": "^4.3.1",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.3.1",
-    "react-error-boundary": "^6.0.0",
-    "react-i18next": "^15.0.0"
+    "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
