--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ tests/e2e/ui/playwright-results.xml
 # Ignore .cursor except rules (needed for AI agents)
 .cursor
 !.cursor/rulespnpm-lock.yaml
+pnpm-lock.yaml
