--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -21,7 +21,8 @@
     "react": "18.3.1",
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.3.1",
-    "react-error-boundary": "^6.0.0"
+    "react-error-boundary": "^6.0.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
@@ -37,8 +38,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "@wordpress/env": "^10.34.0",
     "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
     "jsdoc": "^4.0.5",
+    "jsdom": "^26.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.0.0",
