--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^2.2.9",
     "@headlessui/tailwindcss": "^0.2.1",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-router": "^1.158.4",
     "@wcpos/i18n": "workspace:*",
     "@wordpress/api-fetch": "^7.34.0",
     "@wordpress/components": "^30.7.0",
