--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -4,6 +4,7 @@
     "build": "vite build",
     "dev": "vite build --watch --mode development",
     "preview": "vite preview",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src --ext .ts,.tsx",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -24,6 +25,7 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@wcpos/eslint-config-wordpress": "github:wcpos/eslint-config-wordpress",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@testing-library/jest-dom": "^6.9.1",
@@ -31,15 +33,14 @@
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
-    "@vitejs/plugin-react": "^4.0.0",
+"@vitejs/plugin-react": "^4.0.0",
     "@wordpress/env": "^10.34.0",
     "husky": "^9.1.7",
     "jsdoc": "^4.0.5",
     "jsdom": "^26.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
