--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -34,7 +34,7 @@
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.0.0",
-    "@wordpress/env": "^10.34.0",
+    "@wordpress/env": "10.38.0",
     "husky": "^9.1.7",
     "jsdoc": "^4.0.5",
     "jsdom": "^26.0.0",
