--- a/.github/workflows/tests-php.yml
+++ b/.github/workflows/tests-php.yml
@@ -209,7 +209,12 @@ jobs:
           echo "Smoke test using WP ${{ steps.versions.outputs.wp }}, WC ${{ steps.versions.outputs.wc }}"
 
       - name: Start WordPress Environment
-        run: pnpm run wp-env start
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          retry_wait_seconds: 10
+          command: pnpm run wp-env start
 
       - name: Check versions
         run: |
@@ -372,7 +377,12 @@ jobs:
           cat .wp-env.json
 
       - name: Start WordPress Environment
-        run: pnpm run wp-env start
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          retry_wait_seconds: 10
+          command: pnpm run wp-env start
 
       - name: Check versions
         run: |
@@ -463,7 +473,12 @@ jobs:
           echo "Coverage using WP ${{ needs.smoke-test.outputs.wp_version }}, WC ${{ needs.smoke-test.outputs.wc_version }}"
 
       - name: Start WordPress Environment with Xdebug
-        run: pnpm run wp-env start --xdebug=coverage
+        uses: nick-fields/retry@v3
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          retry_wait_seconds: 10
+          command: pnpm run wp-env start --xdebug=coverage
 
       - name: Run PHPUnit with coverage
         run: pnpm run test:unit:php
@@ -502,7 +517,6 @@ jobs:
         with:
           pattern: phpunit-results-*
           path: test-results
-          merge-multiple: true
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
