--- a/package.json
+++ b/package.json
@@ -37,13 +37,10 @@
   },
   "homepage": "https://wcpos.com",
   "devDependencies": {
-    "@playwright/test": "^1.58.0",
-    "@wordpress/babel-plugin-makepot": "^6.39.0",
-    "@wordpress/env": "10.38.0",
-    "jsdoc": "^4.0.3",
-    "newman": "^6.2.1",
-    "taffydb": "^2.7.3",
-    "glob": "^11.0.0",
+    "@playwright/test": "^1.58.2",
+    "@wordpress/env": "^10.39.0",
+    "jsdoc": "^4.0.5",
+    "newman": "^6.2.2",
     "turbo": "^2.8.7",
     "wp-hookdoc": "0.2.0"
   },
