--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -6,19 +6,19 @@
     "start": "node_modules/.bin/webpack --watch"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.45.0",
+    "@tanstack/react-query": "^5.90.21",
     "@wcpos/i18n": "workspace:*",
-    "@woocommerce/components": "^12.3.0",
+    "@woocommerce/components": "^13.1.0",
     "@wordpress/api-fetch": "^7.39.0",
-    "@wordpress/components": "^28.0.0",
+    "@wordpress/components": "^32.1.0",
     "@wordpress/element": "^6.39.0",
-    "@wordpress/hooks": "^4.0.0",
+    "@wordpress/hooks": "^4.39.0",
     "@wordpress/url": "^4.39.0",
     "classnames": "^2.5.1",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-error-boundary": "^4.1.2"
+    "react-error-boundary": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
@@ -28,41 +28,30 @@
     "@babel/preset-typescript": "^7.28.5",
     "@babel/runtime": "^7.28.6",
     "@svgr/webpack": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.45.0",
-    "@types/jest": "^29.5.14",
+    "@tanstack/react-query-devtools": "^5.91.3",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.23",
-    "@types/react": "^18.3.18",
-    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
     "@wcpos/eslint-config-wordpress": "github:wcpos/eslint-config-wordpress",
-    "@wordpress/env": "10.38.0",
-    "autoprefixer": "^10.4.24",
-    "babel-loader": "^9.2.1",
+    "@wordpress/env": "^10.39.0",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.3",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^9.0.2",
-    "html-webpack-plugin": "^5.6.6",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jsdoc": "^4.0.5",
-    "mini-css-extract-plugin": "^2.9.0",
-    "sass": "^1.89.3",
-    "npm-run-all": "^4.1.5",
+    "css-minimizer-webpack-plugin": "^7.0.4",
+    "jest": "^30.2.0",
+    "mini-css-extract-plugin": "^2.10.0",
+    "sass": "^1.97.3",
     "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1",
-    "postcss-loader": "^8.1.1",
-    "prettier": "^3.6.2",
+    "postcss-loader": "^8.2.0",
+    "prettier": "^3.8.1",
     "sass-loader": "^16.0.7",
-    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.16",
-    "ts-loader": "^9.5.1",
+    "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "webpack": "^5.99.9",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-livereload-plugin": "^3.0.2",
-    "wp-hookdoc": "0.2.0"
+    "webpack": "^5.105.2",
+    "webpack-bundle-analyzer": "^5.2.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-livereload-plugin": "^3.0.2"
   },
-  "packageManager": "pnpm@10.4.1"
+  "packageManager": "pnpm@10.8.0"
 }
