--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -18,7 +18,7 @@
     "@wordpress/api-fetch": "^7.39.0",
     "@wordpress/url": "^4.39.0",
     "classnames": "^2.5.1",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^6.1.0",
@@ -34,20 +34,15 @@
     "@types/react": "^19.2.3",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.4",
-    "@wordpress/env": "10.38.0",
-    "husky": "^9.1.7",
-    "jsdoc": "^4.0.5",
+    "@wordpress/env": "^10.39.0",
     "jsdom": "^28.0.0",
-    "npm-run-all": "4.1.5",
-    "prettier": "^3.6.2",
+    "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.18",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-svgr": "^4.5.0",
-    "vitest": "^4.0.18",
-    "wp-hookdoc": "0.2.0"
+    "vitest": "^4.0.18"
   },
-  "packageManager": "pnpm@10.4.1"
+  "packageManager": "pnpm@10.8.0"
 }
